<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="view_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="my_app_1_name">SPOTIFY STREAMER</string>
    <string name="my_app_2_name">SCORES APP</string>
    <string name="my_app_3_name">LIBRARY APP</string>
    <string name="my_app_4_name">BUILD IT BIGGER</string>
    <string name="my_app_5_name">XYZ READER</string>
    <string name="my_app_6_name">CAPSTONE: MY OWN APP</string>
    <string name="app_toast_text_prefix">This button will launch my</string>
</resources>
