<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/ViewBgColor">

    <TextView android:text="@string/view_title"
        android:id="@+id/titleTextView"
        style="@style/TitleTextView" />

    <Button
        android:text="@string/my_app_1_name"
        android:id="@+id/button_app1"
        android:layout_below="@+id/titleTextView"
        android:layout_marginTop="26dp"
        style="@style/AppButtonDefault"
        android:onClick="openApp" />

    <Button
        android:text="@string/my_app_2_name"
        android:id="@+id/button_app2"
        android:layout_below="@+id/button_app1"
        style="@style/AppButtonDefault"
        android:onClick="openApp" />

    <Button
        android:text="@string/my_app_3_name"
        android:id="@+id/button_app3"
        android:layout_below="@+id/button_app2"
        style="@style/AppButtonDefault"
        android:onClick="openApp" />

    <Button
        android:text="@string/my_app_4_name"
        android:id="@+id/button_app4"
        android:layout_below="@+id/button_app3"
        style="@style/AppButtonDefault"
        android:onClick="openApp" />

    <Button
        android:text="@string/my_app_5_name"
        android:id="@+id/button_app5"
        android:layout_below="@+id/button_app4"
        style="@style/AppButtonDefault"
        android:onClick="openApp" />

    <Button
        android:text="@string/my_app_6_name"
        android:id="@+id/button_app6"
        android:layout_below="@+id/button_app5"
        style="@style/MyOwnAppButton"
        android:onClick="openApp" />

</RelativeLayout>
